# snips

./: alloctrace.c  alloctrace2.c  bignum.c  colors  epoll_et_srv.c  ff-crop  gcc-when-intro  json.c  lor-thin-ignore.js  magnet  malloc_binsearch.c  map-zero-page.c  motify  netlink.c  nod  passgen  radix.cpp  return-values-from-function.bash  togif  tor-query-nodes  unpack  wifi  write_bmp.c
MIPT-code-dump/: cartesian.cpp  combine  fwlist.h
MIPT-code-dump/chat/: .gitignore  CMakeLists.txt  README.md  laba2-protocol.md
MIPT-code-dump/chat/client/: CMakeLists.txt  main.c  my_sscanf.c  my_sscanf.h  net.c  net.h  tmux_helper_inwin  tmux_helper_outwin  tmux_iface
MIPT-code-dump/chat/common/: message.h  message_parse.h  span.h
MIPT-code-dump/chat/libls/: CMakeLists.txt  README.md
MIPT-code-dump/chat/server/: CMakeLists.txt  README.md  main.c  read_pass.c  read_pass.h
MIPT-code-dump/chat/server/chat/: chat.c  chat.h  chat_data.h  enqueue_objs.h  send_msgs.h  span_utils.h
MIPT-code-dump/chat/server/chat/hist/: hist.c  hist.h
MIPT-code-dump/chat/server/chat/users/: users.c  users.h
MIPT-code-dump/chat/server/net/: README.md  net.c  net.h
MIPT-code-dump/chat/server/proto/: proto.c  proto.h  proto_data.h
MIPT-code-dump/chat/tester/: CMakeLists.txt  tester.c
bf/: .gitignore  Makefile  bf  bfjit.c  gen.py
dsssg/: Makefile  README.md  config.mk  dsssg  requirements.txt
motify-send/: .gitignore  Makefile  storage.c
mpv-scripts/: ofd.lua  ssid.lua
re/: .gitignore  Makefile  dfa.h  dfa2re.c  dfa2re.h  dfa_complement.c  dfa_complement.h  dfa_match.c  main.c  (+14 more)
(+48 files in other folders)
